--- a/SDAU/SDAU.CSharp.csproj
+++ b/SDAU/SDAU.CSharp.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -69,9 +66,6 @@
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
@@ -125,6 +119,7 @@
     <Compile Include="Assets\Externals\Highlighting System\HighlightingSystemDemo\Scripts\Service\FPSCounter.cs" />
     <Compile Include="Assets\Externals\Highlighting System\HighlightingSystemDemo\Scripts\Service\PresetSelector.cs" />
     <Compile Include="Assets\Externals\Highlighting System\HighlightingSystemDemo\Scripts\Service\SceneLoader.cs" />
+    <Compile Include="Assets\Scripts\Common\AIController.cs" />
     <Compile Include="Assets\Scripts\Common\ApplicationLoader.cs" />
     <Compile Include="Assets\Scripts\Common\CameraController.cs" />
     <Compile Include="Assets\Scripts\Common\Loading.cs" />
